# egui-controls

./: Cargo.toml  README.md
examples/: basic_control_panel.rs  readme.rs  simple_control_panel.rs
src/: lib.rs  parse.rs
tests/: simple_control_panel.rs
